[package]
name = "que"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Cavey Cool <c@temporal.xyz>", "Ben Coverston <b@temporal.xyz>"]
description = "A high performance channel with optional backpressure, interprocess capability, and a multiconsumer mode."
repository = "https://github.com/temporalxyz/que.git"

[features]

[dependencies]
bytemuck = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"


[[bench]]
name = "bench"
harness = false


[profile.release]
lto = "thin"
codegen-units = 1
