[package]
name = "que"
version = "0.4.5"
edition = "2021"
license = "Apache-2.0"
authors = ["Cavey Cool <c@temporal.xyz>", "Ben Coverston <b@temporal.xyz>"]
description = "A high performance channel with optional backpressure, interprocess capability, and a multiconsumer mode."
repository = "https://github.com/temporalxyz/que.git"

[features]
default = []
loom = ["dep:loom"]

[dependencies]
bytemuck = { workspace = true }
derivative = { workspace = true }
loom = { version = "0.7.2", optional = true }
nix = { workspace = true }

[dev-dependencies]
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
criterion = "0.5.1"
loom = { version = "0.7.2" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }


[[bench]]
name = "bench"
harness = false


[profile.release]
lto = "thin"
codegen-units = 1
